# mini-agent-action

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  test.py
.github/workflows/: docker-publish.yml
