[project]
name = "mini-agent-action"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mini-swe-agent>=1.11.1",
]

[project.scripts]
mini-agent-action = "main:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "main.py",
    "README.md",
]
